--- a/_sass/initialize.scss
+++ b/_sass/initialize.scss
@@ -10,7 +10,7 @@ $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
 $homepage-font-color: rgba(225,225,225,1);
-$homepage-background-color: rgba(0,0,12,0.85);
+$homepage-background-color: rgba(0,0,5,0.9);
 $homepage-accent-color: rgba(250, 130, 30, 1);
 
 // Width of the content area
